cluster/wiki-js/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wiki-js
  name: wiki-js
  namespace: wiki
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: wiki-js
  replicas: 0
  template:
    metadata:
      labels:
        app: wiki-js
    spec:
      containers:
        - env:
            - name: DB_TYPE
              value: postgres
            - name: DB_HOST
              value: wiki-psql-rw.wiki.svc.cluster.local
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: wiki
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  name: wiki-db-credentials
                  key: password
            - name: DB_NAME
              value: wiki
            - name: HA_ACTIVE
              value: "1"
          image: ghcr.io/requarks/wiki:2.5.306@sha256:8680a5e10663f1aa786b8c54978ce9b56f9802efcf624960d4b1280dcb240299
          imagePullPolicy: Always
          name: wiki-js
          ports:
            - containerPort: 3000
              name: 3000tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 60
            httpGet:
              path: /healthz
              port: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "2"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - wiki-js
                topologyKey: kubernetes.io/hostname
