cluster/wiki-js/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-js-ingress
  namespace: wiki
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: 100m
    nginx.ingress.kubernetes.io/client-header-buffer-size: 16k
    nginx.ingress.kubernetes.io/client-max-body-size: 100m
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    nginx.ingress.kubernetes.io/large-client-header-buffers: 8 32k
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 3600s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600s
spec:
  ingressClassName: nginx-external
  tls:
    - hosts:
        - wiki-dev.login.no
  rules:
    - host: wiki-dev.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wiki-js-svc
                port:
                  number: 3000
